# jello-gpu

./: .gitignore  CMakeLists.txt  README.md
shaders/: base.frag  base.vert  cel.frag  cel.vert  collide.comp  constrain.comp  correct.comp  diffuse.frag  diffuse_cel.frag  gravity.comp  integrate.comp  phong.frag  phong_cel.frag  springs.comp
src/: camera.cpp  constructs.h  glad.c  includes.h  lighting.hpp  main.cpp  simulator.cpp  simulator.hpp  utils.cpp  utils.hpp
src/glad/: glad.h
